[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ado-keyring"
version = "0.1.0"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["keyring>=23.0", "requests>=2.28"]

[project.entry-points."keyring.backends"]
ado-keyring = "ado_keyring:DevOpsKeyring"

[tool.hatch.build.targets.wheel]
packages = ["python/ado_keyring"]
