[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ado-keyring"
dynamic = ["version"]
description = "A keyring backend that authenticates to Azure DevOps package feeds using browser-based OAuth2 with PKCE."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["keyring>=23.0", "requests>=2.28"]

[project.entry-points."keyring.backends"]
ado-keyring = "ado_keyring:AdoKeyring"

[dependency-groups]
dev = ["pytest>=7.0"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["python/ado_keyring"]
